# bgmon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  ML.md  Makefile  README.md  TODO.md  docker-compose.swarm.yml  docker-compose.yml  handout.md
.github/workflows/: ci.yml
.omo/: deploy.md
backend/: AUDIT_CRITICAL_FIXES.md  TESTING.md  gunicorn.conf.py  pyproject.toml  run_scheduler.py
backend/bgmon_api/: app.py  auth_utils.py  config.py  extensions.py  models.py  seed.py  thread_tracer.py  utils.py
backend/bgmon_api/commands/: __init__.py  train_predictor.py
backend/bgmon_api/routes/: alarms.py  auth.py  dashboard.py  family.py  ke_estimator.py  log.py  night.py  notifications.py  settings.py  shifts.py  users.py
backend/bgmon_api/services/: alarm_evaluator.py  feature_builder.py  influx_reader.py  influx_writer.py  ke_estimator.py  leader.py  libre_fetcher.py  model_publisher.py  model_trainer.py  prediction_evaluation_types.py  prediction_evaluator.py  predictor.py  twilio_caller.py  web_push.py
backend/migrations/versions/: 02e0084e3298_merge_heads.py  20260628_201007_add_glucose_readings_table.py  20260629_230000_add_global_settings_table.py  20260629_233000_add_note_entry_type.py  20260629_233500_fix_note_enum_uppercase.py  20260629_240000_add_twilio_from_number.py  20260629_250000_add_notification_profiles.py  20260629_260000_add_icon_to_notification_profiles.py  20260629_270000_fix_notification_area_uppercase.py  20260629_280000_fix_notification_threshold_uppercase.py  20260629_290000_add_user_active_profile_and_snooze.py  20260703_150000_add_alarm_entry_type.py  20260710_000000_add_performance_indexes.py  20260710_170000_add_prediction_models.py  20260717_000000_add_dashboard_tiles.py  20260717_010000_expand_legacy_stats_dashboard_tile.py  4ec923090e2c_extend_user_colors_light_dark_bg_primary.py  5d6da09005e7_merge_heads_2.py  72cee2f2896b_add_user_preferences_snooze_default_.py  7d4ecf528df1_add_scheduler_leader.py  b6971862cdda_add_webhook_token_to_notification_.py  c69cb50e7c74_add_user_phone_number.py  e49ca9a43f28_add_user_color_preferences.py  ff74235944c6_initial_models.py
backend/tests/: conftest.py  test_alarm_evaluator.py  test_auth.py  test_dashboard.py  test_endpoints.py  test_health.py  test_leader_election.py  test_libre_and_alarms.py  test_libre_data.py  test_log_api.py  test_ml_config.py  test_model_trainer.py  test_notification_profiles.py  test_prediction_api.py  test_prediction_evaluator.py  test_prediction_features.py  test_prediction_models.py  test_predictor_service.py  test_settings_api.py  test_shifts_night_family.py  test_transactions_and_integrity.py  test_twilio_caller.py  test_users_api.py  test_web_push.py
frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html  service-worker.js
frontend/src/lib/: auth.ts  dashboardTiles.test.ts  dashboardTiles.ts  theme.ts
frontend/src/lib/api/: dashboard.ts  log.ts
frontend/src/lib/components/: BadgeModal.svelte  BgModal.svelte  DailyScoreModal.svelte  GlucoseGraph.svelte  LogEntryForm.svelte  LogHistory.svelte  NightProfile.svelte  PredictionModal.svelte  ProfileSelector.svelte  PushNotifications.svelte  SettingsDialog.svelte  ShiftManager.svelte  SnoozeIndicator.svelte  SnoozeModal.svelte  StatsCard.svelte  StreakModal.svelte  TirModal.svelte
frontend/src/lib/stores/: pendingLogs.ts
frontend/src/lib/utils/: tirCalculation.test.ts  tirCalculation.ts
frontend/src/lib/whatsNew/: releases.ts  state.test.ts  state.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/family/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/watch/: +page.svelte
frontend/static/: manifest.webmanifest
scripts/: check.sh
